# core

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .flake8  Dockerfile  Makefile  conftest.py  manage.py  pyproject.toml  requirements.txt
backend/opc/: asgi.py  celery.py  settings.py  settings_test.py  urls.py  wsgi.py
backend/opc/apps/billing/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/opc/apps/billing/migrations/: 0001_initial.py
backend/opc/apps/contracts/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/opc/apps/contracts/migrations/: 0001_initial.py
backend/opc/apps/core/: __init__.py  apps.py  tasks.py  urls.py  views.py
backend/opc/apps/notifications/: apps.py  services.py  signals.py
backend/opc/apps/parties/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/opc/apps/parties/migrations/: 0001_initial.py
backend/opc/apps/properties/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/opc/apps/properties/migrations/: 0001_initial.py
backend/tests/: conftest.py  test_auth.py  test_contracts.py  test_core.py  test_parties.py  test_properties.py
docs/: ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  CLA.md  CONTRIBUTING.md  FIRST_STEPS.md  FRONTEND_ARCHITECTURE.md  GITHUB_SETUP.md  LICENSE.md  README.md  ROADMAP.md
frontend/: README.md  eslint.config.js  index.html  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: README.md  (+1 more)
(+32 files in other folders)
